# turtlebot_6wd

./: CMakeLists.txt  README.md  package.xml
firmware/PS2X_Example/: Motor.h  PS2X_Example.ino  PS2X_lib.rar
firmware/arduino_controller/: arduino_controller.ino
firmware/arduino_controller4/: arduino_controller4.ino
firmware/firmware/: firmware.ino
firmware/motor_driver/: motor_driver.ino
firmware/motor_driver-test/: motor_driver-test.ino
launch/: _rf2o.launch  bringup-old.launch  bringup.launch  imu.launch  keyboard_teleop.launch  laser.launch  localizacion.launch  mapping_default.launch  minimal.launch  move_base.launch  navigation.launch  odom_laser.launch  rf2o_laser_odometry.launch  slam.launch  test_imu.launch  test_laser.launch  tutorial.launch  tutorial_view.launch
param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  imu_calib.yaml
param/ekf/: hypha_ekf_params.yaml  robot_localization.yaml
scripts/: motor_driver.py
src/: PID.cpp  PID.h  base_node.cpp  imu_vel.cpp  mpu925x_node.cpp  raw_vel.cpp
udev-rules/: 50-robot_base.rules  52-lidar.rules  58-lino.rules
